# o

./: 3d.html  404.html  Cargo.toml  book.toml  ecs.html  index.html  introduction.html  print.html  project.html  readme.md  searchindex.js  searchindex.json  test.scene  ui.html
.github/workflows/: book.yml
assets/: color.frag  sky.frag  texture.frag
assets/shaders/: base.vert  color.frag  default.frag  imgui.frag  imgui.vert  light.frag  light.vert  lighting.glsl  normal.frag  shadow.frag  sky.frag  ssao.frag  texture.frag  unlit.frag
book/: 3d.md  SUMMARY.md  ecs.md  project.md  scenes.md  ui.md
engine/: Cargo.toml
engine/src/: ecs.rs  gfx.rs  lib.rs  scene.rs  ui.rs
game/: Cargo.toml
game/src/: main.rs
phosphor/: Cargo.toml
phosphor/src/: assets.rs  ecs.rs  gfx.rs  lib.rs  scene.rs
phosphor_3d/: Cargo.toml
phosphor_3d/src/: lib.rs
phosphor_derive/: Cargo.toml
phosphor_derive/src/: lib.rs
phosphor_editor/: Cargo.toml  ui.ini
phosphor_editor/layouts/: Default.ini
phosphor_editor/src/: main.rs  panels.rs
phosphor_editor/src/panels/: assets.rs  environment.rs  info.rs  inspector.rs  log.rs  mod.rs  outline.rs  scene.rs  settings.rs
phosphor_fmod/: Cargo.toml
phosphor_fmod/src/: lib.rs
phosphor_imgui/: Cargo.toml
phosphor_imgui/src/: lib.rs
phosphor_rapier/: Cargo.toml
phosphor_rapier/src/: lib.rs
phosphor_ui/: Cargo.toml
phosphor_ui/src/: lib.rs
res/: base.vert  color.frag  imgui.frag  imgui.vert  preview.frag  shader.frag  shader.vert  sky.frag  sky.vert  texture.frag
src/: gfx.rs  main.rs
