[package]
name = "phosphor"
version = "0.1.0"
edition = "2021"

[dependencies]
phosphor_derive = { path = "../phosphor_derive" }
gl = "0.14"
glfw = "0.51"
glam = { version = "0.22", features = ["serde"] }
image = "0.24"
obj-rs = "0.7"
log = "0.4"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
linkme = "0.3"
once_cell = "1.17"
nanorand = "0.7"
shader-prepper = { git = "https://github.com/h3r2tic/shader-prepper" }
puffin = "0.14"
